@@ -262,8 +262,8 @@ def update_video_infos(provider, context, video_id_dict, playlist_item_id_dict=N
         replace_context_menu = False
 
         # Refresh ('My Subscriptions')
-        if context.get_path() == '/special/new_uploaded_videos_tv/' or context.get_path().startswith(
-                '/channel/mine/playlist/'):
+        if context.get_path().startswith('/special/new_uploaded_videos_tv') or \
+                context.get_path().startswith('/channel/mine/playlist/'):
             yt_context_menu.append_refresh(context_menu, provider, context)
 
         # Queue Video
@@ -326,8 +326,8 @@ def update_video_infos(provider, context, video_id_dict, playlist_item_id_dict=N
             yt_context_menu.append_subscribe_to_channel(context_menu, provider, context, channel_id, channel_name)
 
         # more...
-        refresh_container = context.get_path().startswith(
-            '/channel/mine/playlist/LL') or context.get_path() == '/special/disliked_videos/'
+        refresh_container = context.get_path().startswith('/channel/mine/playlist/LL') or \
+                            context.get_path() == '/special/disliked_videos/'
         yt_context_menu.append_more_for_video(context_menu, provider, context, video_id,
                                               is_logged_in=provider.is_logged_in(),
                                               refresh_container=refresh_container)
